2007-04-26  Sanel <karijes@users.sourceforge.net>

	* Added edelib-config.in, which will produce edelib-config
	* Replaced edelibconf.{h,h.in} with edelib/_conf.{h,h.in}
	so installed library can correctly find it (it will be in
	include/edelib/)
	* Added InstallProgram rule to Jamrules

2007-04-25  Sanel <karijes@users.sourceforge.net>

	* Small fix in Config class for CONFIG_USE_STDIO

2007-04-24  Sanel <karijes@users.sourceforge.net>

	* Added append(num, char) and operator+=(ch) in String
	with the tests
	* dir_list() accepts "." as directory parameter

2007-04-21  Sanel <karijes@users.sourceforge.net>

	* Added IconTheme with documentation
	* string from libstdc++ dies on assign(NULL) so
	our String's assign will trigger assertion for that case
	* Recoded Sound so it can be initialized only once during
	application lifetime

2007-04-17  Sanel <karijes@users.sourceforge.net>

	* Maded data()/substr() in String const, as this is required
	by Standard
	* Removed assertion from substr since num parameter
	represents size of returned characters
	* Added CONFIG_USE_STDIO in Config class
	* Increased buffers sizes in Config class so line/values
	can accepts huge sizes
	* Added stringtok

2007-04-15  Sanel <karijes@users.sourceforge.net>

	* Added ExpandableGroup
	* Added test/examples/ directory with few samples
	* Added dir_list
	* Fixed flaw in str_ends when test string have only
	one character
	* More tests for str_ends :P
	* Almost complete icon_chooser
	* Small fix for function module for doxygendocumentation
	* Leek in Config class cleaned
	* A small leek in dir_list too ;)
	* Added get_localized to Config class so locale dependant
	values can be retreived
	* ExpandableGroup now loads/handles data much faster

2007-04-11  Sanel <karijes@users.sourceforge.net>

	* Small fix so genreadme can work on FreeBSD

2007-04-09  Sanel <karijes@users.sourceforge.net>

	* Build script tweaks
	* Removed some warrnings
	* Added XSet class
	* Added Sound class
